[gd_scene load_steps=5 format=2]

[ext_resource path="res://Vehicle/spaceship_simple.png" type="Texture" id=1]
[ext_resource path="res://Vehicle/Spaceship.gd" type="Script" id=2]
[ext_resource path="res://Collisions and detections/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 25, 30, -25, 30 )

[node name="Spaceship" type="KinematicBody2D"]
scale = Vector2( 1.8, 1.8 )
collision_layer = 2
collision_mask = 73
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.1831, 3.33333 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -17 )
polygon = PoolVector2Array( 0, 0, 25, 30, -25, 30 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.277778, -17 )
shape = SubResource( 1 )

[node name="WeaponCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PowerupDuration" type="Timer" parent="."]

[editable path="Hurtbox"]
